manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "test"
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: "test"
  template:
    metadata:
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "test"
      labels:
        app: "test"
    spec:
      containers:
        - name: "test"
          image: "lemonsharp.azurecr.io/test"
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "50m"
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
