manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "test"
    namespace: default
    labels:
        app: "test"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "test"
